@@ -9,3 +9,4 @@
 [#499] Allow ATOM elements in query tokens allowing the use of handles as LINK targets
 [#524] Using MongoDB split collections (nodes and links)
 [#499] Implemented Evolution agent to process QUERY_EVOLUTION commands in the service bus
+[#544] Add benchmark tests for AtomDB
